# neurdicom-desktop

./: .gitignore  CMakeLists.txt
data/shaders/: main.frag  main.vert
src/: DicomUtils.cpp  DicomUtils.h  DicomViewer.cpp  DicomViewer.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  main.cpp  tumorsegmentation.cpp  tumorsegmentation.h
